# PriorAuthAI-Governance-Sandbox

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.js  agent_engine.py  app.js  cases.js  challenger_agent.py  deploy-eks.sh  extracted_policies.json  fix-and-redeploy.sh  generate_evidence_docs.py  generate_pdf.py  generated_skills.json  help.html  hooks.js  index.css  index.html  main.html  pyproject.toml  redeploy-app.sh  regoInterpreter.js  requirements.txt  rules.rego  rules_declaration.md  s3_helper.py  seed_graph_db.py  seed_vector_db.py  server.py  set-aws-profile.sh  skills.js  skills_declaration.md  startsite.sh
k8s/: apply-irsa.sh  deployment.yaml  ingress.yaml  namespace.yaml  neo4j.yaml  nodegroup.yaml  qdrant-pvc.yaml  qdrant.yaml  service.yaml  serviceaccount.yaml
policies/: POL-ONC-220_hooks.json  POL-ONC-220_rules.md  POL-ONC-220_skills.json  POL-RAD-501_hooks.json  POL-RAD-501_rules.md  POL-RAD-501_skills.json  POL-RX-880_hooks.json  POL-RX-880_rules.md  POL-RX-880_skills.json  POL-SURG-340_hooks.json  POL-SURG-340_rules.md  POL-SURG-340_skills.json  policy_oncology_pet_ct.json  policy_radiology_lumbar_mri.json  policy_specialty_rx_dupixent.json  policy_surgery_knee_arthroscopy.json  preset_cases.json
skills/: npi_skill.js
src/clinical_reasoning_fabric/: __init__.py  orchestrator.py
src/clinical_reasoning_fabric.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_end_to_end_pa_flow.py  test_frontend_api_integration.py
tests/property/: test_active_state_exclusion_property.py  test_api_operation_independence_property.py  test_axisweave_auth_data_isolation_property.py  test_bounded_retrieval_property.py  test_briefing_packet_invariants_property.py  test_cdc_pipeline_property.py  test_chunking_content_preservation_property.py  test_confidence_calculation_property.py  (+21 more)
(+73 files in other folders)
