[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-reasoning-fabric"
version = "0.1.0"
description = "Clinical Reasoning Fabric - Unified architecture for clinical AI agents orchestrating Prior Authorization decision support"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "hypothesis>=6.100.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "qdrant-client>=1.9.0",
    "neo4j>=5.19.0",
    "docling>=2.0.0",
    "chonkie>=0.1.0",
    "opa-python>=1.0.0",
    "dagster>=1.7.0",
    "dbt-core>=1.8.0",
    "dbt-snowflake>=1.8.0",
    "pydantic>=2.7.0",
    "cryptography>=42.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "property: Property-based tests using Hypothesis",
    "integration: Integration tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hypothesis]
# Hypothesis settings for property-based testing
# These can be overridden per-test using @settings decorator
database_backend = "directory"

[tool.hypothesis.profiles.default]
max_examples = 100
deadline = 10000  # 10 seconds per example

[tool.hypothesis.profiles.ci]
max_examples = 500
deadline = 30000  # 30 seconds per example for CI

[tool.hypothesis.profiles.dev]
max_examples = 20
deadline = 5000  # 5 seconds per example for fast dev feedback
